Projects: Basic endpoints added
